--- a/.github/workflows/build_conda.yaml
+++ b/.github/workflows/build_conda.yaml
@@ -17,7 +17,7 @@ jobs:
       - name: Conda environment creation and activation
         uses: conda-incubator/setup-miniconda@v2
         with:
-          python-version: 3.10
+          python-version: "3.10"
           environment-file: env.yaml
           activate-environment: build
           auto-update-conda: true
@@ -28,7 +28,7 @@ jobs:
         with:
           meta_yaml_dir: .
           overwrite: true
-          python-version: 3.10
+          python-version: "3.10"
           user: phygbu
           label: main
           token: ${{ secrets.ANACONDA }} # Replace with the right name of your secret
